; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_explain.c_show_expression.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_explain.c_show_expression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32*, i32*, i32, %struct.TYPE_4__*)* @show_expression to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_expression(i32* %0, i8* %1, i32* %2, i32* %3, i32 %4, %struct.TYPE_4__* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_4__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i8* %1, i8** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32 %4, i32* %11, align 4
  store %struct.TYPE_4__* %5, %struct.TYPE_4__** %12, align 8
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %9, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = call i32* @set_deparse_context_planstate(i32 %17, i32* %18, i32* %19)
  store i32* %20, i32** %13, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %13, align 8
  %23 = load i32, i32* %11, align 4
  %24 = call i8* @deparse_expression(i32* %21, i32* %22, i32 %23, i32 0)
  store i8* %24, i8** %14, align 8
  %25 = load i8*, i8** %8, align 8
  %26 = load i8*, i8** %14, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %28 = call i32 @ExplainPropertyText(i8* %25, i8* %26, %struct.TYPE_4__* %27)
  ret void
}

declare dso_local i32* @set_deparse_context_planstate(i32, i32*, i32*) #1

declare dso_local i8* @deparse_expression(i32*, i32*, i32, i32) #1

declare dso_local i32 @ExplainPropertyText(i8*, i8*, %struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
